--- a/index.html
+++ b/index.html
@@ -4,34 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
     <title>Abacate Fix</title>
 </head>
 <body>
     <main>
-        <!-- Passo 0 -->
+        <!-- Passo 0: Biblioteca -->
         <div class="passo ativo" id="passo-0">
             <img src="img/cenario-passo0.png" alt="Cenário da biblioteca">
-            <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida. Nessa carta, a autora deixa algumas pistas para encontrá-la e eu decidi segui-las!</p>
+            <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida...</p>
             <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
             <button class="btn-proximo" data-proximo="2">Pernambuco</button>
         </div>
 
-        <!-- Passo 4 -->
+        <!-- Passo 4: Retorno para casa -->
         <div class="passo" id="passo-4">
             <img src="img/cenario-passo4.png" alt="Imagem de voltar para casa">
-            <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria encontrado.</p>
+            <p>Você decide que a aventura é grande demais e volta para casa...</p>
         </div>
 
-        <!-- Passo 11 -->
+        <!-- Passo 11: Cidade Perdida -->
         <div class="passo" id="passo-11">
             <img src="img/cenario-passo11.png" alt="Cenário da cidade perdida">
-            <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar este lugar.</p>
+            <p>Dentro da cidade perdida, você descobre tesouros inimagináveis...</p>
         </div>
-
-        <!-- Adicione outros passos aqui -->
     </main>
     <script src="script.js"></script>
 </body>
